# action-gateway

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: deploy-docs.yml  release.yml
action-gateway/: .dockerignore  .gitignore  AGCTL_YAML_SYNTAX.md  Cargo.toml  Dockerfile  MCP_CLIENT_SCHEMA.md  README.md  docker-compose.yml  example.yaml  gateway-store.example.json  start.sh
action-gateway/scripts/: seed-fake-redis-data.redis  seed-fake-redis-data.sh  smoke-demo-stack.sh  start-demo-stack.sh
action-gateway/src/: actions.rs  admin.rs  audit.rs  control_plane.rs  lib.rs  main.rs  mcp.rs  rbac_manifest.rs  sls.rs  store.rs
docs/: index.md  rustpress.toml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/clients/: codex.md  index.md
docs/configuration/: agctl.md  index.md  sources-and-allowlists.md
docs/guide/: agctl.md  concepts.md  configure-sources.md  deployment.md  getting-started.md  index.md  mcp-client.md  troubleshooting.md
docs/operations/: deployment.md  index.md  security-boundary.md  troubleshooting.md
docs/reference/: admin-api.md  agctl-yaml.md  store.md  tools.md
scripts/: start-docs-public.sh
