[package]
name = "action-gateway-v2"
version = "0.1.4"
edition = "2024"

[dependencies]
axum = "0.8.9"
futures-util = "0.3.32"
redis = { version = "1.2.1", features = ["tokio-comp"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "mysql", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v4"] }
clap = { version = "4.6.1", features = ["derive"] }
sha2 = "0.11.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
time = { version = "0.3.47", features = ["parsing", "formatting"] }
